# dsTest

./: .gitignore  README.md  setup.cfg  setup.py
assets/models/: logistic_reg_model
data/: demographic_data.csv  device_type_weights_weights.csv  employment_data.csv  non_colinear_demographic_data.csv  non_colinear_employment_data.csv  time_of_day_weights.csv
dsTest/: __init__.py  constants.py  hurdle_model.py  utils.py
dsTest/scores/: device_type.py  time_of_day.py
dsTest/streamlit/: app.py  desc.py
dsTest/streamlit/pages/: stage1_page.py  stage2_page.py
notebooks/: Demographic_analysis.ipynb  Part1_time of day processor.ipynb  employment_data_analysis.ipynb  hurdle modelling.ipynb  time of day processor.ipynb
