[metadata]
name = dsTest
description = Data science test for 59a
author = Richard Ademefun
author_email = richardademefun@yahoo.co.uk
url = https://github.com/richardademefun/dsTest

[option]
zip_safe = False

install_requires =
  pandas

setup_requires =
  setuptools_scm
  pytest-runner

tests_require =
  pytest
  pytest-cov

exclude =
  tests*

[aliases]
test = pytest

junit_family = xunit2

norecursedirs =
  dist
  build
  .eggs

[coverage:run]
omit =
  *conftest.py
  *setup*
  **/__init__*