[metadata]
name = dsTest
description = Data science test for 59a
author = Richard Ademefun
author_email = richardademefun@yahoo.co.uk
url = https://github.com/richardademefun/dsTest

[options]
zip_safe = False

install_requires =
  pandas
  numpy
  streamlit
  matplotlib
  seaborn
  sklearn

  
python_requires =
  >=3.8

setup_requires =
  setuptools_scm
  pytest-runner

tests_require =
  pytest
  pytest-cov

packages = find:

[options.packages.find]
exclude =
  tests*

[aliases]
test = pytest

junit_family = xunit2

norecursedirs =
  dist
  build
  .eggs
